--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="JavaScript" href="./assets/js/logic.js">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!--firebase-->
+    <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
 
     <title>Train Schedule Application</title>
 </head>
@@ -17,7 +22,7 @@
 <body>
     <div class="container">
         <div class="jumbotron" id="header">
-            <h1>Super awesome</h1>
+            <h1>Super Awesome</h1>
             <h3>Train Picker</h3>
         </div>
         <!-- <div class="row">
@@ -62,7 +67,7 @@
         <div class="row">
             <div class="col-12">
                 <h1>Today's Schedule</h1>
-                <table class="table table-bordered">
+                <table id="train-table" class="table table-bordered">
                     <thead>
                         <tr>
                             <th scope="col">Train Name</th>
